--- a/public/index.html
+++ b/public/index.html
@@ -102,7 +102,7 @@
                         // JavaScript initialization file that is also loaded when in development mode
                         "dev-init": "js/app/init/MobileInit.js",
                         // JavaScript file that is loaded when in production mode
-                        "prod-js": "js/app/init/MobileInit.min.js",
+                        "prod-js": "js/app/init/MobileInit.min.js"
                     };
 
                 }
