--- a/public/index.html
+++ b/public/index.html
@@ -139,9 +139,9 @@
     </head>
     <body>
 
-        <div id="game-view" data-role="page">
-
-        </div> <!-- /page -->
+    <div id="game-menu" data-role="page"></div> <!-- /page -->
+    <div id="game-view" data-role="page"></div> <!-- /page -->
+    <div id="game-multiplayer" data-role="page"></div> <!-- /page -->
 
     </body>
 </html>
